@@ -1,6 +1,11 @@
 Pending changes in the mainline
 ===============================
 
+General
+-------
+
+* Built-in decoding of palette images
+
 REST API
 --------
 
